# desktop-ai-client

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  issue-processing-state.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.claude/: README.md  claude-security-guidance.md  settings.json
.codex/: CODEOWNERS.md  security-patterns.yaml  settings.json
.github/: CODEOWNERS  SECURITY.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
docs/: README.md  Tauri_Svelte_AI_App_Architecture_Adversarial_Hardened_v5.md  agent-context.md  architecture.md  command-inventory.md  design-blueprint.md  implementation-plan.md  memory-loop.md  multi-agent.md  privacy-boundaries.md  prompt-blueprint.md  provider-routing.md  release-evidence.md  threat-model.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
plans/: 001-guard-concurrent-chat-send.md  001-restore-storage-wrapper-compilation.md  002-consolidate-command-policy-enforcement.md  002-deterministic-hydrated-conversation-ordering.md  003-order-history-search-by-relevance.md  003-revoke-file-tokens-after-use.md  004-align-stop-hook-review-contract.md  004-cap-attachment-size-and-type.md  005-add-test-coverage.md  005-finish-storage-error-migration.md  006-quote-fts5-search-queries.md  007-remove-duplicate-npm-lockfile.md  008-add-ci-workflow.md  009-add-lint-and-format.md  010-scope-artifact-events-to-conversation.md  011-unify-shell-lock-order.md  (+2 more)
src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/: app-shell.toml  artifacts.toml  chat.toml  files.toml  history.toml  privacy.toml
src-tauri/proptest-regressions/: ipc_inventory_prop_tests.txt
src-tauri/src/: AGENTS.md  app_state.rs  ipc_inventory_prop_tests.rs  lib.rs  main.rs
src-tauri/src/ipc/: AGENTS.md  app_shell.rs  artifacts.rs  chat.rs  files.rs  history.rs  inventory.rs  mod.rs  privacy.rs  providers.rs
src-tauri/src/providers/: AGENTS.md  capabilities.rs  mod.rs  openrouter.rs  policy.rs  routing.rs  sse.rs
src-tauri/src/security/: AGENTS.md  artifact_sandbox.rs  attachment_budget.rs  command_policy.rs  file_tokens.rs  mod.rs  redaction.rs  secrets.rs
src-tauri/src/storage/: AGENTS.md  artifacts.rs  backup.rs  fts.rs  memory.rs  migrations.rs  mod.rs  retention.rs  sqlite.rs  turns.rs
src-tauri/src/telemetry/: AGENTS.md  audit_log.rs  memory_replay.rs  mod.rs  release_evidence.rs
src-tauri/tests/: app_shell.rs
(+314 files in other folders)
