[package]
name = "desktop-ai-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_ai_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
reqwest = { version = "0.13", features = ["json", "stream"] }
secrecy = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mime_guess = "2"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
toml = "0.8"

[dev-dependencies]
proptest = "1"

[features]
# Custom features used to gate debug-only command registration.
# In release builds, debug features must not be included.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
dev-env-secrets = []

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
